# tdd_playground

./: .gitignore  CMakeLists.txt  CMakePresets.json
includes/: class.h  module.h
src/: class.cpp  main.cpp  module.cpp
tests/: CMakeLists.txt  test_class.cpp  test_module.cpp
